organizando o jupyter com markdown

--- a/fake_news_analysis.ipynb
+++ b/fake_news_analysis.ipynb
@@ -877,14 +877,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a72f9530",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 16,
    "id": "0410ff9f",
    "metadata": {},
@@ -1422,6 +1414,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "93ee3dfe",
+   "metadata": {},
+   "source": [
+    "## Creating a common vocabulary based on the intersection of two datasets"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "id": "c71fa903",
@@ -1464,6 +1464,14 @@
     "\n",
     "lean_combined_df = combined_df.drop_duplicates()\n",
     "print(f\"Lean combined shape: {lean_combined_df.shape}, Original combined shape: {combined_df.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73ecde92",
+   "metadata": {},
+   "source": [
+    "## Using the common vocabulary to create a new vectorizer and train a new model"
    ]
   },
   {
@@ -1948,6 +1956,14 @@
    "source": [
     "svm_classifier = LinearSVC()\n",
     "svm_classifier.fit(X_train_tfidf, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "024d5e52",
+   "metadata": {},
+   "source": [
+    "## Evaluating the model on the second dataset"
    ]
   },
   {
