--- a/fake_news_analysis.ipynb
+++ b/fake_news_analysis.ipynb
@@ -1724,129 +1724,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "8415f93f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Top 40 features in the first model:\n",
-      "reuters\n",
-      "read\n",
-      "featured\n",
-      "video\n",
-      "image\n",
-      "breaking\n",
-      "gop\n",
-      "just\n",
-      "getty\n",
-      "hillary\n",
-      "wednesday\n",
-      "nov\n",
-      "washington\n",
-      "com\n",
-      "thursday\n",
-      "tuesday\n",
-      "watch\n",
-      "republican\n",
-      "sen\n",
-      "21st\n",
-      "mr\n",
-      "wire\n",
-      "pic\n",
-      "rep\n",
-      "images\n",
-      "america\n",
-      "daily\n",
-      "breitbart\n",
-      "reportedly\n",
-      "21wire\n",
-      "entire\n",
-      "spokesman\n",
-      "saying\n",
-      "reporters\n",
-      "american\n",
-      "terror\n",
-      "factbox\n",
-      "flickr\n",
-      "monday\n",
-      "mail\n",
-      "\n",
-      "Top 40 features in the second model:\n",
-      "reuters\n",
-      "featured\n",
-      "image\n",
-      "getty\n",
-      "breitbart\n",
-      "follow\n",
-      "breaking\n",
-      "com\n",
-      "video\n",
-      "read\n",
-      "october\n",
-      "twitter\n",
-      "flickr\n",
-      "wire\n",
-      "york\n",
-      "thursday\n",
-      "2017\n",
-      "nyp\n",
-      "hillary\n",
-      "nyt\n",
-      "jeromeehudson\n",
-      "watch\n",
-      "wfb\n",
-      "november\n",
-      "monday\n",
-      "photo\n",
-      "friday\n",
-      "21wire\n",
-      "wow\n",
-      "entire\n",
-      "jerome\n",
-      "wednesday\n",
-      "wt\n",
-      "tuesday\n",
-      "2016\n",
-      "just\n",
-      "anti\n",
-      "siriusxm\n",
-      "pamkeynen\n",
-      "snip\n"
-     ]
-    }
-   ],
-   "source": [
-    "# main coefficients in the first model\n",
-    "main_coefficients = np.abs(svm_classifier.coef_[0])\n",
-    "\n",
-    "# Get the indices of the top 40 coefficients\n",
-    "top_indices = np.argsort(main_coefficients)[-40:][::-1]  # Get indices of the top 40 coefficients\n",
-    "# Get the corresponding feature names\n",
-    "top_features = [tfidf_vectorizer.get_feature_names_out()[i] for i in top_indices]\n",
-    "# Print the top 40 features\n",
-    "\n",
-    "print(\"Top 40 features in the first model:\")\n",
-    "for feature in top_features:\n",
-    "    print(feature)\n",
-    "\n",
-    "\n",
-    "# main coefficients in the second model\n",
-    "main_coefficients2 = np.abs(svm_classifier2.coef_[0])\n",
-    "# Get the indices of the top 40 coefficients\n",
-    "top_indices2 = np.argsort(main_coefficients2)[-40:][::-1]  # Get indices of the top 40 coefficients\n",
-    "# Get the corresponding feature names\n",
-    "top_features2 = [tfidf_vectorizer.get_feature_names_out()[i] for i in top_indices2]\n",
-    "# Print the top 40 features\n",
-    "print(\"\\nTop 40 features in the second model:\")\n",
-    "for feature in top_features2:\n",
-    "    print(feature)\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "93ee3dfe",
    "metadata": {},
@@ -2481,19 +2358,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "id": "c2fe44a1",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'svm_classifier' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m coef = \u001b[43msvm_classifier\u001b[49m.coef_\n\u001b[32m      3\u001b[39m feature_names = tfidf_vectorizer.get_feature_names_out()\n\u001b[32m      5\u001b[39m top_k = \u001b[32m40\u001b[39m  \u001b[38;5;66;03m# Número de palavras mais relevantes\u001b[39;00m\n",
-      "\u001b[31mNameError\u001b[39m: name 'svm_classifier' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "reuters: 19.4138\n",
+      "said: 5.1525\n",
+      "read: -4.5180\n",
+      "breaking: -3.5734\n",
+      "video: -3.5565\n",
+      "featured: -3.5537\n",
+      "gop: -3.3250\n",
+      "image: -3.2774\n",
+      "just: -3.1576\n",
+      "getty: -2.9418\n",
+      "hillary: -2.4688\n",
+      "mr: -2.3586\n",
+      "factbox: 2.3465\n",
+      "rep: -2.2766\n",
+      "sen: -2.1586\n",
+      "washington: 2.1498\n",
+      "watch: -2.1161\n",
+      "com: -2.1078\n",
+      "21st: -2.0349\n",
+      "republican: 1.9006\n",
+      "pic: -1.8752\n",
+      "america: -1.8377\n",
+      "wire: -1.8084\n",
+      "entire: -1.7734\n",
+      "reportedly: -1.7621\n",
+      "didn: -1.7353\n",
+      "21wire: -1.7236\n",
+      "doesn: -1.6962\n",
+      "saying: 1.6812\n",
+      "daily: -1.6764\n",
+      "images: -1.6319\n",
+      "terror: -1.5959\n",
+      "showed: 1.5818\n",
+      "flickr: -1.5779\n",
+      "mail: -1.5757\n",
+      "american: -1.5541\n",
+      "thursday: 1.5440\n",
+      "https: -1.5218\n",
+      "rival: 1.5089\n",
+      "isis: -1.4610\n"
      ]
     }
    ],
